@@ -30,9 +30,11 @@ dnl
 AC_DEFUN([ATF_MODULE_APPLICATION], [
     ATF_CHECK_STD_VSNPRINTF
 
-    AC_LANG_PUSH([C])
-    AC_MSG_CHECKING(whether getopt allows a + sign for POSIX behavior)
-    AC_RUN_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
+    AC_CACHE_CHECK(
+      [whether getopt allows a + sign for POSIX behavior],
+      [kyua_cv_getopt_plus], [
+      AC_LANG_PUSH([C])
+      AC_RUN_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>], [
     int argc = 4;
@@ -64,25 +66,29 @@ AC_DEFUN([ATF_MODULE_APPLICATION], [
 
     return (seen_a && !seen_plus) ? EXIT_SUCCESS : EXIT_FAILURE;
 ])],
-    [getopt_allows_plus=yes
-     AC_DEFINE([HAVE_GNU_GETOPT], [1],
-               [Define to 1 if getopt allows a + sign for POSIX behavior])],
-    [getopt_allows_plus=no])
-    AC_MSG_RESULT(${getopt_allows_plus})
-    AC_LANG_POP([C])
+      [kyua_cv_getopt_plus=yes],
+      [kyua_cv_getopt_plus=no])
+      AC_LANG_POP([C])
+    ])
+    if test x"${kyua_cv_getopt_plus}" = xyes; then
+        AC_DEFINE([HAVE_GNU_GETOPT], [1],
+                  [Define to 1 if getopt allows a + sign for POSIX behavior])
+    fi
 
-    AC_LANG_PUSH([C])
-    AC_MSG_CHECKING(whether getopt has optreset)
-    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
+    AC_CACHE_CHECK(
+      [whether getopt has optreset],
+      [kyua_cv_getopt_optreset], [
+      AC_LANG_PUSH([C])
+      AC_COMPILE_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
 #include <unistd.h>], [
     optreset = 1;
     return EXIT_SUCCESS;
 ])],
-    [getopt_has_optreset=yes],
-    [getopt_has_optreset=no])
-    if test x"${getopt_has_optreset}" = yes; then
+      [kyua_cv_getopt_optreset=yes],
+      [kyua_cv_getopt_optreset=no])
+      AC_LANG_POP([C])
+    ])
+    if test x"${kyua_cv_getopt_optreset}" = xyes; then
         AC_DEFINE([HAVE_OPTRESET], [1], [Define to 1 if getopt has optreset])
     fi
-    AC_MSG_RESULT(${getopt_has_optreset})
-    AC_LANG_POP([C])
 ])
